--- a/package.json
+++ b/package.json
@@ -13,8 +13,13 @@
   "author": "Solomon Broadbent",
   "license": "ISC",
   "dependencies": {
-    "babel": "^6.23.0",
-    "babel-preset-env": "^1.6.1",
     "express": "^4.16.2"
+  },
+  "devDependencies": {
+    "babel": "^6.23.0",
+    "babel-core": "^6.26.0",
+    "babel-preset-env": "^1.6.1",
+    "gulp": "^3.9.1",
+    "gulp-babel": "^7.0.0"
   }
 }
